# astow

./: README.md  astow.cabal  flake.nix
app/: Main.hs
doc/: astow.1
scripts/: mktree
src/: Actions.hs  AstowMonadT.hs  Diagnostic.hs  DirTree.hs  Fallible.hs  FileUtils.hs  FsOps.hs  KissDList.hs  Main.hs
src-exe/: Actions.hs  AstowMonadT.hs  Diagnostic.hs  DirTree.hs  Fallible.hs  FileUtils.hs  FsOps.hs  KissDList.hs  Main.hs
tests/: ActionsTests.hs  AstowMonadTTests.hs  DiagnosticTests.hs  DirTreeTests.hs  FakeFsOps.hs  FallibleTests.hs  FileUtilsTests.hs  KissDListTests.hs  Main.hs
