cabal-version:      3.4
name:               astow
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Copy-based alternative to stow

-- A longer description of the package.
-- description:

license:            BSD-2-Clause
license-file:       LICENSE
author:             Lorenz Minder
maintainer:         lminder@gmx.net

-- A copyright notice.
-- copyright:
category:           System
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common dialect
    default-language: GHC2021
    default-extensions: OverloadedStrings

executable astow
    import:           dialect, warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Actions
        DirTree
        FileUtils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.19 && <5
      , bytestring
      , directory
      , filepath
      , file-io
      , optparse-applicative
    hs-source-dirs:   src-exe

-- vim:et:ts=4:sw=4
