cabal-version:          3.4
name:                   astow
version:                0.1.0.0

-- A short (one-line) description of the package.
synopsis:               Copy-based alternative to stow

-- A longer description of the package.
-- description:

license:                BSD-2-Clause
license-file:           LICENSE
author:                 Lorenz Minder
maintainer:             lminder@gmx.net

-- A copyright notice.
-- copyright:
category:               System
build-type:             Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options:        -Wall

common dialect
    default-language:   GHC2021
    default-extensions: OverloadedStrings

library
    import:             dialect, warnings
    hs-source-dirs:     src
    exposed-modules:
        Actions
      , AstowMonadT
      , Diagnostic
      , DirTree
      , Fallible
      , FileUtils
      , FsOps
      , KissDList
    build-depends:
        base >=4.19 && <5
      , bytestring
      , containers
      , directory
      , filepath
      , file-io
      , mtl
      , os-string
      , text
      , transformers


executable astow
    import:             dialect, warnings
    main-is:            Main.hs
    hs-source-dirs:     app

    -- Modules included in this executable, other than Main.
    other-modules:

    build-depends:
        base >=4.19 && <5
      , astow
      , directory
      , filepath
      , optparse-applicative
      , os-string
      , text
      , transformers

test-suite astow-tests
    import:             dialect, warnings
    main-is:            Main.hs
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    other-modules:
        KissDListTests
    build-depends:
        base >=4.19 && <5
      , astow
      , hspec
      , QuickCheck

-- vim:et:ts=4:sw=4
